Add html and styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <article class="card">
+    <img src="./images/user-photo.jpg" alt="user-picture"class="card-img">
+    <h2 class="card-heading">Mary Robins</h2>
+    <h3 class="sub-heading">Arcitect</h3>
+    <p class="card-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo reiciendis est odit voluptates, eius delectus officiis. Possimus expedita sequi minus cumque necessitatibus, porro nam libero ipsam, doloremque, similique in illo.</p>
+    <div class="social-container">
+      <div class="social-icon-container">
+        <div class="icon-wrapper">
+          <img src="./images/favorite.svg" alt="favorite" class="social-icon">
+        </div>
+        <p class="social-text">2252</p>
+      </div>
+      <div class="social-icon-container">
+        <div class="icon-wrapper">
+          <img src="./images/grade.svg" alt="grade" class="social-icon">
+        </div>
+        <p class="social-text">238</p>
+      </div>
+      <div class="social-icon-container">
+        <div class="icon-wrapper">
+          <img src="./images/thumb.svg" alt="thumb" class="social-icon">
+        </div>
+        <p class="social-text">783</p>
+      </div>
+    </div>
+    <button class="btn">Follow</button>
+  </article>
 </body>
 </html>
